# neo-llm-bench

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  QUICKSTART.md  README.md  graded_failure_modes.md  graded_report.json  graded_report.md  graded_report_rep1.json  lessons.md  main.py  pyproject.toml  round_3_design.md  round_3_planning.md
configs/: mcp.yaml  pr.yaml  profile_8gb.yaml  profile_m5max.yaml  single_64gb.yaml
scripts/: _problem_ids.py  audit_one_multi_turn.py  bench.sh  compare_matched_slice.py  download_models.sh  failure_modes.py  generate_phase2_variants.py  grade_bakeoff.py  graded_bench.sh  regrade_local.py  regrade_phase2.py  report.py  resource_report.py  round1_overnight.sh  run_bakeoff.py  sample_raw_text.py  sample_resources.sh  stub_ablation.py
tests/: conftest.py  test_acceptance_grader.py  test_backend_retry.py  test_bench_resume.py  test_bfcl_adapter.py  test_bfcl_grade.py  test_bfcl_multi_turn.py  test_bfcl_schemas.py  test_citations_diff_aware.py  test_config.py  test_context.py  test_cve_lookup.py  test_humaneval_resume.py  test_loop_write_pressure.py  test_matched_slice.py  test_mbpp_resume.py  test_mcp_bridge.py  test_mcp_isolation.py  test_mcp_server_safety.py  test_metadata.py  test_pr_empty_diff.py  test_pr_flow.py  test_pr_lock.py  test_pr_resume.py  test_prompts.py  test_raw_text_persistence.py  test_repo_index_coverage.py  test_run_state.py  test_sample_raw_text.py  test_sdd.py  test_search.py  test_single.py  test_spec.py  test_spec_resolver.py  test_spec_validator.py  test_swebench_adapter.py  test_swebench_compare.py  (+6 more)
(+25875 files in other folders)
