[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-bench"
version = "0.1.0"
description = "llama-bench — llama.cpp tool-use & coding bake-off for small models on a constrained Mac"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "rich>=13.0",
    "tree-sitter>=0.20,<0.22",
    "tree-sitter-languages>=1.10",
    "mcp>=1.0",
]

[project.scripts]
llamabench = "llamabench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llamabench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bfcl-eval>=2026.3.23",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
